--- a/config/lism_right.conf
+++ b/config/lism_right.conf
@@ -19,3 +19,15 @@ CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_CRITICAL=10
 
 # Charge Indicator feature
 CONFIG_CHARGE_INDICATOR=y
+
+# Enable status advertisement
+CONFIG_ZMK_STATUS_ADVERTISEMENT=y
+CONFIG_ZMK_STATUS_ADV_KEYBOARD_NAME="LisM"
+
+# Power optimization (10Hz active, 0.03Hz idle)
+CONFIG_ZMK_STATUS_ADV_ACTIVITY_BASED=y
+CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=120
+CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=10000
+
+# Split keyboard battery monitoring (if applicable)
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
